# aio-readiness-checker-api

./: main.py  pyproject.toml
app/: config.py  main.py
app/core/: analyzer.py  extractor.py  scorer.py
app/utils/: markdown_utils.py
