[project]
name = "aio-readiness-checker-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.127.0",
    "fpdf2>=2.8.5",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
